--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "gray-matter": "^4.0.2",
     "hyvor-talk-react": "^1.0.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.4",
     "node-glob": "^1.2.0",
     "raw-loader": "^3.0.0",
