--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-markdown": "^4.1.0",
+    "react-responsive-carousel": "^3.2.10",
     "react-youtube": "^7.11.3",
     "reactjs-popup": "^1.5.0",
     "serve": "^11.3.2"
