--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hyvor-talk-react": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.4",
+    "nextjs-redirect": "^5.0.0",
     "node-glob": "^1.2.0",
     "raw-loader": "^3.0.0",
     "react": "16.13.1",
