--- a/quizzes/answer-these-questions-and-we-will-guess-your-favourite-season-in-animal-crossing.json
+++ b/quizzes/answer-these-questions-and-we-will-guess-your-favourite-season-in-animal-crossing.json
@@ -5,19 +5,19 @@
       "question": "What is your favorite thing about your island?",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "A floral dress"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "Shorts and a t-shirt"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "Dungarees"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "A cosy jumper and jeans"
         },
       ]
@@ -26,19 +26,19 @@
       "question": "Pick a food",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "A fresh salad"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "A yummy pizza"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "A big bowl of pasta"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "A warming bowl of soup"
         },
       ]
@@ -47,19 +47,19 @@
       "question": "Pick a colour",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "Yellow"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "Green"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "Red"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "Blue"
         },
       ]
@@ -68,19 +68,19 @@
       "question": "Pick a Sunday activity",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "Going to the beach with friends"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "Watching your favourite series on TV"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "Going for a long walk in the countryside"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "Curling up with a good book"
         },
       ]
@@ -89,19 +89,19 @@
       "question": "Pick a hobby",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "Swimming"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "Running"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "Painting"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "Gaming"
         },
       ]
@@ -110,19 +110,19 @@
       "question": "Pick a flower in Animal Crossing",
       "answers": [
         {
-          "type": "Summer",
+          "type": "Summer!",
           "content": "Mums"
         },
         {
-          "type": "Spring",
+          "type": "Spring!",
           "content": "Lilies"
         },
         {
-          "type": "Autumn/Fall",
+          "type": "Autumn/Fall!",
           "content": "Windflowers"
         },
         {
-          "type": "Winter",
+          "type": "Winter!",
           "content": "Pansies"
         },
       ]
