--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "gray-matter": "^4.0.2",
     "hyvor-talk-react": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.4.4",
+    "next": "^14.1.3",
     "nextjs-redirect": "^5.0.0",
     "node-glob": "^1.2.0",
     "raw-loader": "^3.0.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hamburgers": "^1.0.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-markdown": "^4.1.0",
+    "react-markdown": "^9.0.1",
     "react-paypal-button-v2": "^2.6.2",
     "react-responsive-carousel": "^3.2.10",
     "react-youtube": "^7.11.3",
     "reactjs-popup": "^1.5.0",
-    "serve": "^11.3.2",
+    "serve": "^14.2.1",
     "tinacms": "^1.6.0"
   },
   "devDependencies": {
